# Velen

./: .gitignore  .travis.yml  LICENSE  README.md  pom.xml
.github/: FUNDING.yml
cli-core/: Cargo.toml  README.md
cli-core/src/: main.rs
cli-core/src/produceable/: produceable.rs
cli-core/src/produceable/types/: category.rs  command.rs
cli-core/src/subcommands/: make.rs
cli-core/src/utils/: utils.rs
examples/: README.md
examples/categories/: README.md  example.vecomp
examples/hybrid/: README.md  example.velen  misc.velen
examples/message/: README.md  example.velen
examples/slash/: cat.velen  example.velen
src/main/java/pw/mihou/velen/: VelenBuilder.java
src/main/java/pw/mihou/velen/builders/: VelenCategoryBuilder.java  VelenCommandBuilder.java  VelenGenericMessage.java  VelenMessage.java  VelenPermissionMessage.java  VelenRoleMessage.java
src/main/java/pw/mihou/velen/impl/: VelenCategoryImpl.java  VelenCommandImpl.java  VelenImpl.java
src/main/java/pw/mihou/velen/interfaces/: Velen.java  VelenArguments.java  VelenCategory.java  VelenCommand.java  VelenCommandArguments.java  VelenEvent.java  VelenHybridHandler.java  VelenServerEvent.java  VelenSlashCommandArguments.java  VelenSlashEvent.java
src/main/java/pw/mihou/velen/internals/: VelenBlacklist.java  VelenInternalUtils.java
src/main/java/pw/mihou/velen/modules/: package-info.java
src/main/java/pw/mihou/velen/pagination/: Paginate.java
src/main/java/pw/mihou/velen/prefix/: VelenPrefixManager.java
src/main/java/pw/mihou/velen/ratelimiter/: VelenRatelimiter.java
(+71 files in other folders)
