[package]
name = "velen"
version = "0.1.0"
description = "The command-line interface assistant for Velen."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
handlebars = "4.1.5"
serde_json = "1.0.71"
strum = "0.23"
strum_macros = "0.23"